--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- navigation -->
+<!-- navigation -->
     <header>
         <h1>Hori<span>seo</span>n</h1>
         <nav>
@@ -56,15 +56,17 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
          </section>
+ 
+ <!-- "benefits" section -->
+    <section class="benefits">
+            <div class="benefit-lead"> 
+                <h3>Lead Generation</h3>
+                <img src="./assets/images/lead-generation.png" />
+                <p>
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                </p>
+            </div>
 
-    <div class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -72,6 +74,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
@@ -79,7 +82,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
 
 </body>
 
