--- a/index.html
+++ b/index.html
@@ -25,41 +25,42 @@
             </ul>
         </nav>
     </header>
-
-
  <!-- "hero image" --> 
         <div class="hero-img"></div>
-
- <!-- "search engine optimization" section -->       
-        <section id="search-engine-optimization" class="content search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
+ <!-- "Search Engine" section -->       
+        <section id="search-engine-optimization" class="capabilities content">
+            <div class="float-left">
+                 <img src="./assets/images/search-engine-optimization.jpg" alt="Tools for Great SEO" />
+            </div>
+                 <h2>Search Engine Optimization</h2>
+                 <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                 </p>
         </section>
-
- <!-- "online reputation management" section --> 
-        <section id="online-reputation-management" class="content online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
+<!-- "Online Reputaion Management"" section -->   
+        <section id="online-reputation-management" class="capabilities content">
+            <div class="float-right">
+                <img src="./assets/images/online-reputation-management.jpg" alt="Reputation Increase Graph" />
+            </div>
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                </p>
         </section>
-
- <!-- "social media marketing" section --> 
-        <section id="social-media-marketing" class="content social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
+ <!-- Social Media Marketing" section --> 
+        <section id="social-media-marketing" class="capabilities content">
+            <div class="float-left">
+                <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Text Bubbles" />
+            </div>
+                <h2>Social Media Marketing</h2>
+                <p>
+                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                </p>
          </section>
  
- <!-- "benefits" section -->
+ <!-- "Benefits" section -->
     <section class="benefits">
-            <div class="benefit-lead"> 
+            <div class="benefit-type"> 
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
                 <p>
@@ -67,7 +68,7 @@
                 </p>
             </div>
 
-        <div class="benefit-brand">
+        <div class="benefit-type">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -75,7 +76,7 @@
             </p>
         </div>
 
-        <div class="benefit-cost">
+        <div class="benefit-type">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
@@ -83,7 +84,5 @@
             </p>
         </div>
     </section>
-
 </body>
-
 </html>
