--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<!-- navigation -->
+<!-- "Navigation" -->
     <header>
         <h1>Hori<span>seo</span>n</h1>
         <nav>
@@ -26,13 +26,13 @@
         </nav>
     </header>
     
- <!-- "hero image" --> 
+ <!-- "Hero Image" --> 
              <div class="hero-img"></div>
 
- <!-- "Search Engine" section -->       
-     <section id="search-engine-optimization" class="capabilities content">
+ <!-- "Search Engine Optimization" Section -->       
+     <section id="search-engine-optimization" class="content">
         <div class="float-left">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Tools for Great SEO" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Tools for Great SEO on Notebook" />
         </div>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -40,10 +40,10 @@
             </p>
     </section>
 
-<!-- "Online Reputaion Management"" section -->   
-    <section id="online-reputation-management" class="capabilities content">
+<!-- "Online Reputaion Management" Section -->   
+    <section id="online-reputation-management" class="content">
          <div class="float-right">
-            <img src="./assets/images/online-reputation-management.jpg" alt="Reputation Increase Graph" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="Reputation Increase Graphs on Computer" />
         </div>
              <h2>Online Reputation Management</h2>
              <p>
@@ -51,10 +51,10 @@
             </p>
     </section>
 
- <!-- Social Media Marketing" section --> 
-     <section id="social-media-marketing" class="capabilities content">
+ <!-- "Social Media Marketing" Section --> 
+     <section id="social-media-marketing" class="content">
         <div class="float-left">
-             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Text Bubbles" />
+             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Text Bubbles on Table" />
          </div>
              <h2>Social Media Marketing</h2>
             <p>
@@ -62,11 +62,11 @@
             </p>
      </section>
  
- <!-- "Benefits" section -->
+ <!-- "Benefits" Section -->
     <section class="benefits">
         <div class="benefit-type"> 
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="" />
+            <img src="./assets/images/lead-generation.png" alt="Money Generator Graphic" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -74,7 +74,7 @@
 
         <div class="benefit-type">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt=""/>
+            <img src="./assets/images/brand-awareness.png" alt="Bright Idea Graphic"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -82,7 +82,7 @@
 
         <div class="benefit-type">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt=""/>
+            <img src="./assets/images/cost-management.png" alt="Money Gear Increasor Graphic"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
