Final HTML For Submission

--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
                 </li>
             </ul>
         </nav>
-    </header>
-    
+    </header>  
  <!-- "Hero Image" --> 
              <div class="hero-img"></div>
-
  <!-- "Search Engine Optimization" Section -->       
      <section id="search-engine-optimization" class="content">
         <div class="float-left">
@@ -39,8 +37,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
     </section>
-
-<!-- "Online Reputaion Management" Section -->   
+<!-- "Online Reputation Management" Section -->   
     <section id="online-reputation-management" class="content">
          <div class="float-right">
             <img src="./assets/images/online-reputation-management.jpg" alt="Reputation Increase Graphs on Computer" />
@@ -50,18 +47,16 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
     </section>
-
  <!-- "Social Media Marketing" Section --> 
      <section id="social-media-marketing" class="content">
         <div class="float-left">
              <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Text Bubbles on Table" />
          </div>
              <h2>Social Media Marketing</h2>
-            <p>
+             <p>
                  Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
+             </p>
      </section>
- 
  <!-- "Benefits" Section -->
     <section class="benefits">
         <div class="benefit-type"> 
@@ -71,7 +66,6 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-
         <div class="benefit-type">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Bright Idea Graphic"/>
@@ -79,7 +73,6 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-
         <div class="benefit-type">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Money Gear Increasor Graphic"/>
